add barcode logic